--- a/.github/workflows/staging-qi.yml
+++ b/.github/workflows/staging-qi.yml
@@ -1,4 +1,4 @@
-name: Deploy to Staging
+name: Deploy to Staging - QI
 on:
     push:
         branches:
@@ -12,7 +12,7 @@ jobs:
               uses: wpengine/github-action-wpe-site-deploy@v3
               with:
                   WPE_SSHG_KEY_PRIVATE: ${{ secrets.WPE_SSHG_KEY_PRIVATE }}
-                  WPE_ENV: betterorderstg
+                  WPE_ENV: quincyinststg
                   SRC_PATH: './'
                   REMOTE_PATH: 'wp-content/themes/bop/'
                   FLAGS: -azvr --inplace --delete --exclude=".*"
